- fix display problem when loading savegame with pending events
- fix bug in Sector map when jumping to deep space near some planet
- Sector map: keyboard shortcut 'J' to jump to selected coordinates
- code: updates *.d to D version 2.0, so it can be compiled with modern ldc/gdc in Debian Buster
v 0.1.3
- code: remove mymove(), use sizeof() for buffer sizes
v 0.1.2
- code: remove unused modules, fix code warnings, smarter variable initialization
v 0.1.1
- update build and other docs
v 0.1.0
- code: apply (mostly non-functional) changes from v1.30.0001 ( https://github.com/karynax/ironseed )
- code: use typed pointers for better checks
- avoid double SDL initialization bugs
- combat: fix shield (and no shield, and reflective hull) bugs
- combat: add F1-F4, numpad, Z/X keyboard controls
- fixes crash in combat with no shields
- reenable biorithyms color from gray to pulsing red
- implement keyboard shortcuts for entering x/y/z coord in Sector map
- fix sound controls
v 0.0.9
- keyboard utf8 support (supports shift for lowercase/uppercase etc)
- minor cosmetic updates
- implement F11 fullscreen for SDL-only mode (when no OpenGL)
- slow down some animations so they can actually be seen
v 0.0.8
- huge rewrite of c_utils.c to fix OpenGL and SDL bugs and crashes
v 0.0.7
- c_utils.c force correct filetypes and asserts and fix warnings
- debug tools: scr/cpr image converters
- enabled keyboard autorepeat
- allow game to run on systems without soundcards
v 0.0.6
- fix crash on starting and saving new game
- workaround SDL thread crashes at startup
- Makefile improvements
- make possible compiling without OpenGL
v 0.0.5
- see generating planet scan, instead of black screen with delay
- some cosmetic display fixes in weapons, and planets screens
- allows skipping too slow fading/fadein animations with any keypress
- reenables some easter eggs
- helper debug utility to see TEMP/*.scr files
- fix more Encode crew bugs, including bailing out on "Encode All"
v 0.0.4