@@ -1,3 +1,4 @@
+- fix display problem with negative cargo space
 - fix display problem when loading savegame with pending events
 - fix bug in Sector map when jumping to deep space near some planet
 - Sector map: keyboard shortcut 'J' to jump to selected coordinates
